Fix whitespace

--- a/output/styles2.css
+++ b/output/styles2.css
@@ -13,8 +13,8 @@
 #th_qr           { width:0%; }
 #th_join_url     { width:15%; }
 .td_join_url     {
-    font-family: monospace;
-    white-space: nowrap;
+	font-family: monospace;
+	white-space: nowrap;
 }
 
 .copy_button     {  }
@@ -27,11 +27,11 @@
 
 /* <Colors> */
 :root {
-    --session-classic-dark-green:      #31f196;
-    --session-classic-dark-gray-one:   #414141;
-    --session-classic-dark-gray-two:   #2d2d2d;
-    --session-classic-dark-gray-three: #1b1b1b;
-    --alternate-row-color:             #e8e8e8;
+	/*--session-classic-dark-green:      #31f196;*/
+	/*--session-classic-dark-gray-one:   #414141;*/
+	/*--session-classic-dark-gray-two:   #2d2d2d;*/
+	/*--session-classic-dark-gray-three: #1b1b1b;*/
+	--alternate-row-color:             #e8e8e8;
 }
 #tbl_communities th                 { background-color: lightgray; }
 #tbl_communities tr:nth-child(odd)  { background-color: var(--alternate-row-color); }
@@ -39,91 +39,91 @@
 
 /* <QR code modals> */
 .qr-code {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
 }
 .qr-code-icon {
-    cursor: pointer;
+	cursor: pointer;
 }
 .qr-code-modal {
-    display: none;   /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1;      /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%;     /* Full width */
-    height: 100%;    /* Full height */
-    padding-top: 100px; /* Location of the box */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-/*overflow: auto;*/ /* Enable scroll if needed */
+	display: none;   /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1;      /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 100%;     /* Full width */
+	height: 100%;    /* Full height */
+	padding-top: 100px; /* Location of the box */
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	/*overflow: auto;*/ /* Enable scroll if needed */
 
 }
 .qr-code-modal-content {
-    background-color: #ffffff;
-    border: 1px solid #000000;
-    width: 80%;
-    margin: auto;
-    padding: 20px;
+	background-color: #ffffff;
+	border: 1px solid #000000;
+	width: 80%;
+	margin: auto;
+	padding: 20px;
 }
 .qr-code-modal-close {
-    float: right;
-    font-size: 35px;
-    font-weight: bold;
-    color: #aaaaaa;
+	float: right;
+	font-size: 35px;
+	font-weight: bold;
+	color: #aaaaaa;
 }
 .qr-code-modal-close:hover,
 .qr-code-modal-close:focus {
-    cursor: pointer;
-    text-decoration: none;
-    color: #000000;
+	cursor: pointer;
+	text-decoration: none;
+	color: #000000;
 }
 
 /* <Snackbar> */
 /* The snackbar - position it at the bottom and in the middle of the screen */
 #copy-snackbar {
-  visibility: hidden; /* Hidden by default. Visible on click */
-  min-width: 250px; /* Set a default minimum width */
-  margin-left: -125px; /* Divide value of min-width by 2 */
-  background-color: #333; /* Black background color */
-  color: #fff; /* White text color */
-  text-align: center; /* Centered text */
-  border-radius: 2px; /* Rounded borders */
-  padding: 16px; /* Padding */
-  position: fixed; /* Sit on top of the screen */
-  z-index: 1; /* Add a z-index if needed */
-  left: 50%; /* Center the snackbar */
-  bottom: 30px; /* 30px from the bottom */
+	visibility: hidden; /* Hidden by default. Visible on click */
+	min-width: 250px; /* Set a default minimum width */
+	margin-left: -125px; /* Divide value of min-width by 2 */
+	background-color: #333; /* Black background color */
+	color: #fff; /* White text color */
+	text-align: center; /* Centered text */
+	border-radius: 2px; /* Rounded borders */
+	padding: 16px; /* Padding */
+	position: fixed; /* Sit on top of the screen */
+	z-index: 1; /* Add a z-index if needed */
+	left: 50%; /* Center the snackbar */
+	bottom: 30px; /* 30px from the bottom */
 }
 
 /* Show the snackbar when clicking on a button (class added with JavaScript) */
 #copy-snackbar.show {
-  visibility: visible; /* Show the snackbar */
-  /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
-  However, delay the fade out process for 2.5 seconds */
-  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+	visibility: visible; /* Show the snackbar */
+	/* Add animation: Take 0.5 seconds to fade in and out the snackbar.
+	However, delay the fade out process for 2.5 seconds */
+	-webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+	animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
 /* Animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
+	from {bottom: 0; opacity: 0;}
+	to {bottom: 30px; opacity: 1;}
 }
 
 @keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
+	from {bottom: 0; opacity: 0;}
+	to {bottom: 30px; opacity: 1;}
 }
 
 @-webkit-keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
+	from {bottom: 30px; opacity: 1;}
+	to {bottom: 0; opacity: 0;}
 }
 
 @keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
+	from {bottom: 30px; opacity: 1;}
+	to {bottom: 0; opacity: 0;}
 }
